[package]
name = "blitzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
url = "2.5"
