[package]
name = "blitzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
futures-util = "0.3"
indicatif = "0.17"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
url = "2.5"
